@@ -58,12 +58,22 @@
 #ifndef CONFIG_SEM_PREALLOCHOLDERS
 #  define CONFIG_SEM_PREALLOCHOLDERS 0
 #endif
-#define NLOWPRI_THREADS  (CONFIG_SEM_PREALLOCHOLDERS+1)
+
+#if CONFIG_SEM_PREALLOCHOLDERS > 3
+#  define NLOWPRI_THREADS 3
+#else
+#  define NLOWPRI_THREADS (CONFIG_SEM_PREALLOCHOLDERS+1)
+#endif
 
 #ifndef CONFIG_SEM_NNESTPRIO
 #  define CONFIG_SEM_NNESTPRIO 0
 #endif
-#define NHIGHPRI_THREADS (CONFIG_SEM_NNESTPRIO+1)
+
+#if CONFIG_SEM_NNESTPRIO > 3
+#  define NHIGHPRI_THREADS 3
+#else
+#  define NHIGHPRI_THREADS (CONFIG_SEM_NNESTPRIO+1)
+#endif
 
 /****************************************************************************
  * Private Data
